--- a/src/app/forca/forca.component.html
+++ b/src/app/forca/forca.component.html
@@ -15,6 +15,8 @@ Insira a Palavra
 <br><br>
 
 faltam {{chances}} erros para terminar
+<br>
+<img [src]="'/assets/forca/forca' + (7 - chances) + '.png'">
 
 <br><br>
 
