Melhorando método de adicionar letra incorreta

--- a/src/app/forca/forca.component.html
+++ b/src/app/forca/forca.component.html
@@ -16,7 +16,7 @@ Insira a Palavra
 
 faltam {{chances}} erros para terminar
 <br>
-<img [src]="'/assets/forca/forca' + (7 - chances) + '.png'">
+<img [src]="getImgSrc()">
 
 <br><br>
 
