Adicionando rodapé com meu nome

--- a/src/app/forca/forca.component.html
+++ b/src/app/forca/forca.component.html
@@ -27,3 +27,7 @@ faltam {{chances}} erros para terminar
 </div>
 <br>
 Letras erradas: <span *ngFor="let letra of letrasIncorretas">{{letra}}, </span>
+
+<div class="footer">
+    <p>Cássio Gabriel</p>
+</div>
