--- a/src/app/forca/forca.component.scss
+++ b/src/app/forca/forca.component.scss
@@ -7,3 +7,9 @@
     color: gray;
     text-align: center;
   }
+
+.person{
+    padding: 10px !important;
+    height: 30px !important;
+    width: 30px !important;
+}
