--- a/src/app/forca/forca.component.html
+++ b/src/app/forca/forca.component.html
@@ -7,14 +7,15 @@
             <div class="input-group mb-3">
                 <input class="form-control" #palavra [type]="tipo">
                 <div class="input-group-prepend">
-                    <button class="btn btn-outline-secondary" type="button" (click)="alternaTipo()">{{textoBotao}}</button>
+                    <button class="btn btn-outline-secondary" type="button"
+                        (click)="alternaTipo()">{{textoBotao}}</button>
                 </div>
             </div>
         </div>
         <div class="col-md-1" [hidden]="letras">
             <button class="btn btn-primary" (click)="envia(palavra.value); palavra.value = ''">Ok</button>
         </div>
-        <div class="col-md-1">
+        <div class="col-md-1" [hidden]="!letras">
             <button class="btn btn-secondary" (click)="limpa()">Limpar</button>
         </div>
     </div>
@@ -22,6 +23,7 @@
     <label *ngIf="letras">O jogo começou</label>
 
     <br>
+    
     <div class="row" *ngIf="letras" style="padding-left: 10px;">
         <span *ngFor="let l of letras">
             <span *ngIf="l.includes(' ')">&nbsp;&nbsp;</span>
@@ -32,13 +34,15 @@
 
     <br><br>
 
-    Faltam {{chances}} erros para terminar
-    <br>
-    <img [src]="getImgSrc()">
+    <div *ngIf="letras">
+        Faltam {{chances}} erros para terminar
+        <br>
+        <img [src]="getImgSrc()">
+    </div>
 
     <br><br>
 
-    <div class="row">
+    <div class="row" *ngIf="letras">
         <div class="col-md-2">
             <label class="control-label">Adicionar nova letra</label>
         </div>
@@ -50,7 +54,7 @@
         </div>
     </div>
     <br>
-    Letras erradas: <span *ngFor="let letra of letrasIncorretas">{{letra}}, </span>
+    <span *ngIf="letras">Letras erradas: <span *ngFor="let letra of letrasIncorretas">{{letra}}, </span></span>
 
     <!-- <div class="footer">
         <p>Cássio Gabriel</p>
