--- a/src/app/forca/forca.component.scss
+++ b/src/app/forca/forca.component.scss
@@ -13,3 +13,11 @@
     height: 30px !important;
     width: 30px !important;
 }
+.keyboard{
+  text-align: center;
+}
+.keyboard button {
+  margin-bottom: .5rem;
+  margin-left: .15rem;
+  margin-right: .15rem;
+}
