Tratando numeros e acentos ao enviar a palavra

--- a/src/app/forca/forca.component.scss
+++ b/src/app/forca/forca.component.scss
@@ -21,3 +21,14 @@
   margin-left: .15rem;
   margin-right: .15rem;
 }
+//para usar futuramente para deixar os botões menores para o mobile
+.b {
+  width: 24px;
+    height: 30px;
+    /* padding: 0px; */
+    /* margin: 0; */
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+}
