--- a/src/app/forca/forca.component.html
+++ b/src/app/forca/forca.component.html
@@ -63,8 +63,8 @@
             </div>
         </div>
 
-        <div *ngIf="venceu">Parabéns, você venceu</div>
-        <div *ngIf="perdeu">Infelizmente você perdeu :(</div>
+        <div *ngIf="venceu" style="color: #319931;">Parabéns, você venceu</div>
+        <div *ngIf="perdeu" style="color: red;">Infelizmente você perdeu :(</div>
     </div>
     <!-- <div class="footer">
         <p>Cássio Gabriel</p>
